Fix mobile horizontal overflow

--- a/sass/layout/_content.scss
+++ b/sass/layout/_content.scss
@@ -289,8 +289,7 @@
     .table,
     .section {
       &:not([id=""]) {
-        padding-top: 4rem;
-        display: inline-block;
+        border-top: 4rem solid transparent;
       }
     }
 
